--- a/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsMultiple/_dropdownListItemsMultiple.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsMultiple/_dropdownListItemsMultiple.scss
@@ -10,8 +10,8 @@
 
     flex-grow: 1;
 
-    input[type="checkbox"] {
-      margin-top: 0;
+    .qc-choicefield {
+      margin-top: 0 !important;
     }
   }
 
