--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -44,26 +44,6 @@
       </qc-textfield>
     </div>
 
-      <qc-textfield
-              label="Adresse courriel"
-              size="lg"
-              required
-      >
-          <input type="text"
-                 name="courriel"
-          />
-      </qc-textfield>
-
-      <qc-textfield
-              label="Commentaires"
-              size="xl"
-              description="Vous pouvez entrer des commentaires dans ce champ de texte."
-      >
-          <input type="text"
-                 name="commentaires"
-          />
-      </qc-textfield>
-
     <qc-textfield
             label="Champ de texte multiligne"
             description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
@@ -71,18 +51,8 @@
             max-length="10"
             required
     >
-      <textarea name="zone-lg"></textarea>
+      <textarea name="zone-xxl"></textarea>
     </qc-textfield>
-
-      <qc-textfield
-              label="Grand champ de texte multiligne"
-              description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-              size="xl"
-              max-length="10"
-              required
-      >
-          <textarea name="zone-xl"></textarea>
-      </qc-textfield>
 
     <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
   </form>
@@ -110,6 +80,53 @@
       }
     });
   </script>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Illustration des différentes tailles de champs texte.">
+
+    <qc-textfield
+            label="Taille extra-petite"
+            size="xs"
+    >
+      <input type="text"
+             placeholder="xs"
+      />
+    </qc-textfield>
+
+    <qc-textfield
+            label="Taille petite"
+            size="sm"
+    >
+      <input type="text"
+             placeholder="sm"
+      />
+    </qc-textfield>
+
+  <qc-textfield
+          label="Taille moyenne"
+          size="md"
+  >
+    <input type="text"
+           placeholder="md"
+    />
+  </qc-textfield>
+  <qc-textfield
+          label="Taille large"
+          size="lg"
+  >
+    <input type="text"
+           placeholder="lg"
+    />
+  </qc-textfield>
+  <qc-textfield
+          label="Taille extra-large"
+          size="xl"
+  >
+    <input type="text"
+           placeholder="xl"
+    />
+  </qc-textfield>
+
 </qc-doc-exemple>
 
 
