--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -134,7 +134,7 @@
 
 <h4>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h4>
 
-<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne causent pas décalage. <br/>
+<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne provoquent pas de décalage. <br/>
   Voir le code des champs Téléphone et Poste dans l'exemple ci-dessus.</p>
 
 <h4>Attributs</h4>
