Checkbox - correction d'un bug concernant l'attribut required

--- a/src/sdg/components/ChoiceGroup/Test/checkboxTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/checkboxTest.html
@@ -77,9 +77,7 @@
 
 <div class="qc-row">
     <div class="qc-col-sm-12 qc-col-lg-6">
-        <qc-checkbox
-            required
-        >
+        <qc-checkbox>
             <label>
                 <input type="checkbox"
                        name="consentement-1"
@@ -163,7 +161,6 @@
     </div>
     <div class="qc-col-sm-12 qc-col-lg-6">
         <qc-checkbox compact
-                     required
         >
             <label>
                 <input type="checkbox"
