Ajout de déplacement de FormError dans le div row parent

--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -66,27 +66,51 @@
   </select>
 </qc-select>
 
-<qc-select id="qc-select-invalid" multiple invalid>
-  <label for="select-invalid">État invalide</label>
-  <select multiple id="select-invalid">
-    <option value="1">Option 1</option>
-    <option value="2">Option 2</option>
-    <option value="3">Option 3</option>
-    <option value="4">Option 4</option>
-    <option value="5">Option 5</option>
-    <option value="6">Option 6</option>
-    <option value="7">Option 7</option>
-    <option value="8">Option 8</option>
-    <option value="9">Option 9</option>
-    <option value="10">Option 10</option>
-    <option value="11">Option 11</option>
-    <option value="12">Option 12</option>
-    <option value="13">Option 13</option>
-    <option value="14">Option 14</option>
-    <option value="15">Option 15</option>
-    <option value="16">Option 16</option>
-  </select>
-</qc-select>
+<div class="qc-textfield-row">
+  <qc-select id="qc-select-invalid" multiple invalid>
+    <label for="select-invalid">État invalide</label>
+    <select multiple id="select-invalid">
+      <option value="1">Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+      <option value="4">Option 4</option>
+      <option value="5">Option 5</option>
+      <option value="6">Option 6</option>
+      <option value="7">Option 7</option>
+      <option value="8">Option 8</option>
+      <option value="9">Option 9</option>
+      <option value="10">Option 10</option>
+      <option value="11">Option 11</option>
+      <option value="12">Option 12</option>
+      <option value="13">Option 13</option>
+      <option value="14">Option 14</option>
+      <option value="15">Option 15</option>
+      <option value="16">Option 16</option>
+    </select>
+  </qc-select>
+
+  <qc-select id="qc-select-single-choice-other">
+    <label for="select-single-choice-other">Choix unique</label>
+    <select id="select-single-choice-other">
+      <option value="1" selected>Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+      <option value="4">Option 4</option>
+      <option value="5">Option 5</option>
+      <option value="6">Option 6</option>
+      <option value="7">Option 7</option>
+      <option value="8">Option 8</option>
+      <option value="9">Option 9</option>
+      <option value="10">Option 10</option>
+      <option value="11">Option 11</option>
+      <option value="12">Option 12</option>
+      <option value="13">Option 13</option>
+      <option value="14">Option 14</option>
+      <option value="15">Option 15</option>
+      <option value="16" disabled>Option 16 (désactivée)</option>
+    </select>
+  </qc-select>
+</div>
 
 <qc-select id="qc-select-disabled" disabled>
   <label for="select-disabled">Désactivé</label>
