--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -1,6 +1,7 @@
 <h2 id="textfield">Champ texte</h2>
 
-<qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états. Soumettre le formulaire pour voir les messages d'erreur.">
+
+<qc-doc-exemple caption="Exemples 1 - différents champs de texte. Soumettre le formulaire pour voir les messages d'erreur.">
   <form id="formulaire-champs-textes">
     <qc-textfield
             label="Nom complet"
