--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -10,14 +10,16 @@ $border: 1;
   margin-bottom: rem(32);
 }
 
-.qc-dropdown-list-container {
-  width: 100%;
-
+.qc-dropdown-list-root {
   &-xs { max-width: token-value(size, max-width, xs); }
   &-sm { max-width: token-value(size, max-width, sm); }
   &-md { max-width: token-value(size, max-width, md); }
   &-lg { max-width: token-value(size, max-width, lg); }
   &-xl { max-width: token-value(size, max-width, xl); }
+}
+
+.qc-dropdown-list-container {
+  width: 100%;
 }
 
 .qc-dropdown-list-label-container {
