--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -90,7 +90,7 @@
   </qc-select>
 
   <qc-select id="qc-select-single-choice-other">
-    <label for="select-single-choice-other">Choix unique</label>
+    <label for="select-single-choice-other">Autre choix</label>
     <select id="select-single-choice-other">
       <option value="1" selected>Option 1</option>
       <option value="2">Option 2</option>
@@ -127,7 +127,7 @@
           required
           invalid-text="Veuillez choisir un type de restaurant."
   >
-    <label for="dropdown-list-restaurants-select">Type de restaurant</label>
+    <label for="dropdown-list-restaurants-select">Types de restaurant</label>
     <select id="dropdown-list-restaurants-select" multiple>
       <option value="Pizzeria">Pizzeria</option>
       <option value="Pâtisserie">Pâtisserie</option>
