--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -22,17 +22,16 @@ $border: 1;
 
 .qc-dropdown-list-container {
   width: 100%;
-}
 
-.qc-dropdown-list-label-container {
-  display: flex;
+  .qc-label {
+    margin-bottom: rem(4);
+  }
 
-  justify-content: space-between;
-  margin-bottom: rem(4);
-}
-
-.qc-label {
-  width: fit-content;
+  &-xs { max-width: token-value(size, max-width, xs); }
+  &-sm { max-width: token-value(size, max-width, sm); }
+  &-md { max-width: token-value(size, max-width, md); }
+  &-lg { max-width: token-value(size, max-width, lg); }
+  &-xl { max-width: token-value(size, max-width, xl); }
 }
 
 .qc-dropdown-list {
