Correction d'erreurs typographiques dans la documentation (Button)

--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -1,7 +1,7 @@
 <h2 id="buttons">Boutons</h2>
 <h3>Exemples</h3>
 
-<qc-doc-exemple caption="Exemples des différentes options de boutons.">
+<qc-doc-exemple caption="Exemples des différentes variantes de boutons.">
     <div class="qc-row">
         <div class="qc-col-sm-12 qc-col-lg-3">
             <div>
@@ -113,7 +113,7 @@
 
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détail concernant le composant <code>qc-icon</code>">
+<qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détails concernant le composant <code>qc-icon</code>.">
     <div>
         <button class="qc-button qc-primary">
             <qc-icon type="plus"></qc-icon>
@@ -127,7 +127,7 @@
     </div>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples avec un lien et un champ de soumission">
+<qc-doc-exemple caption="Exemples avec un lien et un bouton de soumission.">
         <a href="javascript:void(0);"
            class="qc-button qc-primary"
            role="button"
