Correction d'erreurs typographiques dans la documentation (PivHeader)

--- a/src/sdg/components/PivHeader/_pivHeader.html
+++ b/src/sdg/components/PivHeader/_pivHeader.html
@@ -3,7 +3,7 @@
 <h3>Exemples</h3>
 <!-- TODO remplacer les aria-label des qc-doc-exemple par aria-labelby et cibler le titre -->
 <qc-doc-exemple id="pivEnteteExempleLiens"
-                caption="Exemple de bandeau d’entête PIV de base"
+                caption="Exemple de bandeau d’en-tête PIV de base"
 >
   <qc-piv-header alt-logo="Accédez à Québec.ca"
                  join-us-url="#join-us"
@@ -14,7 +14,7 @@
 <!--            <qc-code target-id="pivEnteteExempleLiens"></qc-code>-->
 
 <qc-doc-exemple id="pivEnteteExempleRecherche"
-                caption="Exemple de personnalisation des liens du bandeau d’entête PIV"
+                caption="Exemple de personnalisation des liens du bandeau d’en-tête PIV"
 >
   <qc-piv-header
           title-text="Titre du site ou du service"
@@ -34,7 +34,7 @@
 </qc-doc-exemple>
 <!--            <qc-code target-id="pivEnteteExempleRecherche"></qc-code>-->
 
-<qc-doc-exemple caption="Exemple de bandeau d’entête PIV avec recherche personnalisée"
+<qc-doc-exemple caption="Exemple de bandeau d’en-tête PIV avec recherche personnalisée"
 
 >
   <div id="pivEnteteExempleRecherchePersonnalisee">
@@ -77,7 +77,7 @@
     <tr>
       <td>title-text</td>
       <td>Texte</td>
-      <td>Chaine vide</td>
+      <td>Chaîne vide</td>
       <td>Titre au milieu du bandeau (dans un hyperlien)</td>
     </tr>
     <tr>
@@ -85,18 +85,18 @@
 
       <td>Adresse</td>
       <td>/</td>
-      <td>Url de l’hyperlien du titre</td>
+      <td>URL de l’hyperlien du titre</td>
     </tr>
     <tr>
       <td>logo-url</td>
       <td>Adresse</td>
       <td>/</td>
-      <td>Adresse du lien du Logo</td>
+      <td>Adresse du lien du logo</td>
     </tr>
     <tr>
       <td>logo-src</td>
       <td>Adresse</td>
-      <td>adresse du logo inclus dans la trousse</td>
+      <td>Adresse du logo inclus dans la trousse</td>
       <td>Adresse du logo</td>
     </tr>
     <tr>
@@ -115,7 +115,7 @@
       <td>alt-language-url</td>
       <td>Adresse</td>
       <td>vide</td>
-      <td>l’url de l’autre langue. Si vide, le lien n'apparaît pas.</td>
+      <td>L’URL de l’autre langue. Si vide, le lien n'apparaît pas.</td>
     </tr>
     <tr>
       <td>join-us-text</td>
@@ -127,7 +127,7 @@
       <td>join-us-url</td>
       <td>Adresse</td>
       <td>Vide</td>
-      <td>Adresse du lien « Nous joindre ». Si vide, le lien n'apparait pas.</td>
+      <td>Adresse du lien « Nous joindre ». Si vide, le lien n'apparaît pas.</td>
     </tr>
     <tr>
       <td>go-to-content</td>
@@ -151,7 +151,7 @@
       <td>full-width</td>
       <td>"true" ou "false"</td>
       <td>"false"</td>
-      <td>Affiche le bandeau en pleine largeur. (classe de conteneur « qc‑container‑fluid »)</td>
+      <td>Affiche le bandeau en pleine largeur (classe de conteneur « qc‑container‑fluid »).</td>
     </tr>
     <tr>
       <td>enable-search</td>
