Correction d'erreurs typographiques dans la documentation (ToTop)

--- a/src/sdg/components/ToTop/_toTop.html
+++ b/src/sdg/components/ToTop/_toTop.html
@@ -1,6 +1,6 @@
 <h2 id="toTop">Haut de page</h2>
 <p>
-  Le composant <i>haut de page</i> est la flèche qui permet à l’utilisateur de remonter vers le haut de
+  Le composant <i>haut de page</i> est la flèche qui permet à l’utilisateur de revenir en haut de la
   page. Il s'affiche quand l’utilisateur commence à défiler vers le haut.
   Il disparaît quand l’utilisateur commence à défiler vers le bas.
 </p>
