--- a/src/sdg/components/Checkbox/_checkbox.scss
+++ b/src/sdg/components/Checkbox/_checkbox.scss
@@ -33,9 +33,7 @@ input[type="checkbox"].qc-choicefield {
 
     }
   }
-  .qc-compact &,
-  [compact] &,
-  [tiled] & {
+  &.qc-compact {
     &:checked {
       &::before {
         width: rem(8);
