--- a/src/sdg/components/ChoiceGroup/_selectionButtons.html
+++ b/src/sdg/components/ChoiceGroup/_selectionButtons.html
@@ -1,7 +1,7 @@
 <h3 id="selection-button">Boutons de sélection</h3>
 
 
-<qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
+<qc-doc-exemple caption="Exemple de boutons radio sous forme de boutons de sélection avec différents états.">
     <qc-choice-group legend="Sélectionnez une option :"
                     name="ex-radio-select"
                     selection-button
@@ -39,7 +39,7 @@
 </qc-doc-exemple>
 
 <qc-doc-exemple
-        caption="Exemple d’un groupe de cases à cocher au format de boutons de sélection avec différents états"
+        caption="Exemple d’un groupe de cases à cocher sous forme de boutons de sélection avec différents états."
 >
     <qc-choice-group
             name="exemple-checkbox-select"
@@ -77,7 +77,7 @@
     </qc-choice-group>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection sur une rangée">
+<qc-doc-exemple caption="Exemple de boutons radio sous forme de boutons de sélection sur une rangée.">
     <qc-choice-group legend="Choisissez une option :"
                     name="ex-radio-select-inline"
                     selection-button
@@ -126,5 +126,5 @@
 </qc-doc-exemple>
 
 <h4>Documentation technique</h4>
-<p>Voir <a href="#choice-group-doc">la documentation technique du composant qc-choice-group</a></p>
+<p>Voir <a href="#choice-group-doc">la documentation technique du composant qc-choice-group</a>.</p>
 
